kubernetes/haproxy/haproxy-ingress-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-controller

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-name: haproxy-kubernetes-ingress
    meta.helm.sh/release-namespace: haproxy-controller
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: haproxy-kubernetes-ingress
      app.kubernetes.io/name: kubernetes-ingress
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: haproxy-kubernetes-ingress
        app.kubernetes.io/name: kubernetes-ingress
    spec:
      containers:
      - args:
        - --default-ssl-certificate=haproxy-controller/haproxy-kubernetes-ingress-default-cert
        - --configmap=haproxy-controller/haproxy-kubernetes-ingress
        - --http-bind-port=8080
        - --ingress.class=haproxy
        - --publish-service=haproxy-controller/haproxy-kubernetes-ingress
        - --log=info
        image: haproxytech/kubernetes-ingress:3.0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 1042
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: kubernetes-ingress-controller
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 1042
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            ephemeral-storage: 1Gi
          requests:
            cpu: 250m
            ephemeral-storage: 1Gi
            memory: 400Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 20
          httpGet:
            path: /healthz
            port: 1042
            scheme: HTTP
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
          subPath: tmp
        - mountPath: /run
          name: tmp
          subPath: run
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: haproxy-kubernetes-ingress
      serviceAccountName: haproxy-kubernetes-ingress
      terminationGracePeriodSeconds: 60
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: 64Mi
        name: tmp

---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-kubernetes-ingress
  namespace: haproxy-controller
spec:
  ports:
  - name: http
    nodePort: 30781
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: http-8080
    nodePort: 31778
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 30782
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: haproxy-kubernetes-ingress
    app.kubernetes.io/name: kubernetes-ingress
  type: LoadBalancer
  loadBalancerIP: "35.192.214.143"
